--- a/views/add_treatment_plan.ejs
+++ b/views/add_treatment_plan.ejs
@@ -38,7 +38,7 @@
                 <!-- Form Container -->
                 <div class="form-container">
                     <div class="form-section">
-                        <h2 class="section-title">Plan 2</h2>
+                        <h2 class="section-title">Plan <span class="plan-number">1</span></h2>
                         <div class="form-content">
                             <div class="form-field">
                                 <label for="simulationUrl" class="form-label">
@@ -69,7 +69,7 @@
                                     >
                                     <label for="iprFile" class="file-upload-label">
                                         <span class="file-placeholder">Choose File</span>
-                                        <img src="/assets/images/document-icon.svg" alt="Document Icon" class="file-icon">
+                                        <img src="/assets/images/file-upload.png" alt="Document Icon" class="file-icon">
                                     </label>
                                 </div>
                                 
@@ -79,7 +79,7 @@
                 </div>
 
                 <!-- Form Actions Container -->
-                <div class="form-container">
+                <div class="form-container form-actions-container">
                     <div class="form-actions">
                         <button type="button" class="btn btn-secondary">Cancel</button>
                         <button type="submit" class="btn btn-primary">Submit</button>
